--- a/src/components/carousel-knowledge/CarouselItem.css
+++ b/src/components/carousel-knowledge/CarouselItem.css
@@ -38,6 +38,13 @@
 	background-color: var(--color-2);
 	padding: 8px;
 	font-size: 0;
+	border-radius: 16px;
+	transition: all 0.4s ease-in-out;
+}
+.ci-link:hover {
+	border-radius: 0;
+	background-color: var(--color-3);
+	color: var(--color-1);
 }
 .ci-description {
 	opacity: 0;
@@ -101,7 +108,8 @@
 		box-shadow: 0 0 8px var(--color-6);
 	}
 	50% {
-		left: 90%;
+		height: 35%;
+		width: 35%;
 		z-index: 0;
 	}
 	100% {
@@ -119,15 +127,15 @@
 		box-shadow: 0 0 16px var(--color-6);
 	}
 	25% {
-		height: 35%;
-		width: 35%;
 		left: -20%;
 		box-shadow: 0 0 8px var(--color-6);
 	}
 	50% {
+		height: 35%;
+		width: 35%;
 		z-index: 0;
 	}
 	100% {
-		left: 70;
+		left: 0;
 	}
 }
