--- a/src/components/carousel-knowledge/CarouselItem.css
+++ b/src/components/carousel-knowledge/CarouselItem.css
@@ -40,6 +40,7 @@
 	font-size: 0;
 	border-radius: 16px;
 	transition: all 0.4s ease-in-out;
+	cursor: pointer;
 }
 .ci-link:hover {
 	border-radius: 0;
