--- a/src/containers/Section.css
+++ b/src/containers/Section.css
@@ -33,3 +33,15 @@
 	flex-direction: row;
 	height: auto;
 }
+
+.Section.section-3 {
+	margin-top: 16px;
+	background: linear-gradient(
+		180deg,
+		rgba(64, 80, 93, 0.69) 0%,
+		rgba(151, 158, 164, 0.69) 100%
+	);
+	display: flex;
+	flex-direction: column;
+	height: auto;
+}
