--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -21,3 +21,19 @@
 	height: 100vh;
 	width: 100%;
 }
+
+.sh-box.sh-3.bottom {
+	height: auto !important;
+	width: 100%;
+	display: flex;
+	position: relative;
+	flex-wrap: wrap;
+	flex-direction: row;
+	height: 100vh;
+	overflow: hidden;
+}
+
+/*!WORFLOW BOX*/
+.wf-box {
+	margin: 16px;
+}
