--- a/src/components/buttons/LinkButton.css
+++ b/src/components/buttons/LinkButton.css
@@ -9,6 +9,7 @@
 	font-size: 20px;
 	transition: all 0.3s ease, background-color 0.5s ease-in-out;
 	margin-top: 8px;
+	cursor: pointer;
 }
 
 .LinkButton:hover {
